[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/StartMenu.gd" type="Script" id=1]
[ext_resource path="res://sprites/logo (1).png" type="Texture" id=2]
[ext_resource path="res://sprites/drache.png" type="Texture" id=3]
[ext_resource path="res://UI/Button/NewGameButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://UI/Button/ContinueButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://UI/Button/OptionButton.tscn" type="PackedScene" id=6]
[ext_resource path="res://sprites/Toleyhandpersonaluseonly-eZeDl.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://UI/Button/ExitButton.tscn" type="PackedScene" id=8]
[ext_resource path="res://sounds/NFF-menu-03-a.wav" type="AudioStream" id=9]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 7 )

[node name="StartMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_right = -0.712646
margin_bottom = 40.4614
rect_scale = Vector2( 1.00224, 0.964326 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="TextureRect" parent="Menu"]
margin_right = 1869.0
margin_bottom = 316.0
texture = ExtResource( 2 )
stretch_mode = 4

[node name="CenterRow" type="HBoxContainer" parent="Menu"]
margin_top = 320.0
margin_right = 1869.0
margin_bottom = 725.0
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="Menu/CenterRow"]
margin_right = 932.0
margin_bottom = 405.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
alignment = 1

[node name="NewGameButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 4 )]
margin_left = 0.0
margin_top = 52.0
margin_right = 932.0
margin_bottom = 112.0
rect_min_size = Vector2( 360, 60 )
custom_colors/font_color_disabled = Color( 0.831373, 0.215686, 0.215686, 1 )
custom_colors/font_color = Color( 0.776471, 0.141176, 0.141176, 1 )
custom_colors/font_color_hover = Color( 0.870588, 0.509804, 0.921569, 1 )

[node name="ContinueButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 5 )]
margin_top = 132.0
margin_right = 932.0
margin_bottom = 192.0
rect_min_size = Vector2( 360, 60 )

[node name="OptionsButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 6 )]
margin_top = 212.0
margin_right = 932.0
margin_bottom = 272.0
rect_min_size = Vector2( 360, 60 )

[node name="ExitButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 8 )]
margin_top = 292.0
margin_right = 932.0
margin_bottom = 352.0
rect_min_size = Vector2( 360, 60 )

[node name="CenterContainer" type="CenterContainer" parent="Menu/CenterRow"]
margin_left = 936.0
margin_right = 1869.0
margin_bottom = 405.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="Menu/CenterRow/CenterContainer"]
margin_left = 185.0
margin_right = 747.0
margin_bottom = 405.0
texture = ExtResource( 3 )

[node name="VersionLabel" type="Label" parent="Menu"]
margin_top = 729.0
margin_right = 1869.0
margin_bottom = 1120.0
size_flags_vertical = 7
custom_fonts/font = SubResource( 1 )
text = "Version EINS"
valign = 2

[node name="ButtonSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
[connection signal="pressed" from="Menu/CenterRow/Buttons/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/ExitButton" to="." method="_on_ExitButton_pressed"]
